# DealMaker

./: .gitignore  AGENTS.md  DealMaker.spec  README.md  build_release.ps1  dealmaker.cmd  dev.bat  sync_version.js  sync_version.ps1  合同生成工具.py
app/: index.html  package-lock.json  package.json
app/src/: App.tsx  main.tsx  version.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src/components/: QuoteEditor.tsx  QuotePreview.tsx  ui.tsx
app/src/lib/: amount.ts  api.ts  quote.ts  quoteHtml.ts
app/src/styles/: quote-preview.css  theme.css
assets/: 报价明细.template.html
backend/: __init__.py  __main__.py  agent.py  cli.py  core.py  dealmaker-backend.spec  dealmaker-cli.spec  quote.py  run_agent.py  run_cli.py  schema.py  skill_prompt.py  workspace.py
