[package]
name = "dealmaker"
version = "2.1.4"
description = "DealMaker 合同生成工具"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
